--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1675,14 +1675,29 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+}
+@media (min-width: 768px) {
+  .footer-contacts {
+    gap: 0.75rem;
+  }
+}
+@media (min-width: 992px) {
+  .footer-contacts {
+    gap: 1rem;
+  }
 }
 .footer-contacts .btn-phone {
-  --bs-btn-font-size: 2rem;
+  --bs-btn-font-size: 1.75rem;
   -webkit-box-pack: start;
   -ms-flex-pack: start;
   justify-content: start;
   text-align: start;
+}
+@media (min-width: 992px) {
+  .footer-contacts .btn-phone {
+    --bs-btn-font-size: 2rem;
+  }
 }
 .footer-contacts-callback {
   --bs-btn-font-size: 0.625rem;
@@ -1715,15 +1730,31 @@
   --bs-btn-active-color: rgba(var(--bs-primary-rgb), 1);
 }
 .footer .navbar-socials {
-  gap: 1rem;
+  gap: 0.5rem;
 }
 .footer .navbar-socials .nav-link {
-  --bs-btn-color: rgba(var(--bs-primary-rgb), .50);
-  --bs-btn-hover-color: rgba(var(--bs-primary-rgb), 1);
+  --bs-btn-color: rgba(var(--bs-primary-rgb), 1);
+  --bs-btn-hover-color: rgba(var(--bs-teal-400-rgb), 1);
   --bs-btn-active-color: rgba(var(--bs-primary-rgb), 1);
   -webkit-box-shadow: unset;
   box-shadow: unset;
 }
 .footer .navbar-socials .nav-link .icon {
-  --_size: 2rem;
+  --_size: 1.5rem;
+}
+@media (min-width: 992px) {
+  .footer .navbar-socials .nav-link .icon {
+    --_size: 2rem;
+  }
+}
+.footer .navbar-contacts .nav-item-title {
+  font-size: 0.875rem;
+}
+.footer .navbar-contacts .navbar-socials .nav-link {
+  --bs-btn-color: rgba(var(--bs-primary-rgb), .5);
+  --bs-btn-hover-color: rgba(var(--bs-primary-rgb), 1);
+  --bs-btn-active-color: rgba(var(--bs-primary-rgb), .5);
+}
+.footer .navbar-contacts .navbar-socials .nav-link .icon {
+  --_size: 1.25rem;
 }
