--- a/src/partials/filter.html
+++ b/src/partials/filter.html
@@ -143,7 +143,7 @@
                     </div>
 
                     <div class="d-flex flex-column gap-4px">
-                      <div class="row gy-14px gx-lg-8px gx-20px" data-nouislider="">
+                      <div class="row gy-14px gx-lg-8px gx-20px" data-nouislider="multiple">
                         <div class="col-6">
                           <label class="form-control">
                             <span class="form-control-prefix">
@@ -199,7 +199,7 @@
                       </h5>
                     </div>
                     <div class="d-flex flex-column gap-4px">
-                      <div class="row gy-14px gx-lg-8px gx-20px" data-nouislider="">
+                      <div class="row gy-14px gx-lg-8px gx-20px" data-nouislider="multiple">
                         <div class="col-6">
                           <label class="form-control">
                             <span class="form-control-prefix">
