--- a/src/partials/offer.html
+++ b/src/partials/offer.html
@@ -1,4 +1,5 @@
 <div class="offer @if (img.background) {offer--bg}">
+  <a href="#" class="stretched-link position-absolute inset-0"></a>
   <div class="offer-content">
     <h3 class="offer-title">
       @title
@@ -6,7 +7,7 @@
     <p class="offer-text">
       @text
     </p>
-    <a href="#" class="btn btn-40px btn-outline-primary stretched-link">
+    <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-primary-to-teal-400">
       @button.text
     </a>
   </div>
