--- a/src/partials/tool.html
+++ b/src/partials/tool.html
@@ -1,4 +1,5 @@
 <div class="tool">
+  <a href="#" class="stretched-link position-absolute inset-0"></a>
   <div class="tool-content">
     <h3 class="tool-title">
       @title
@@ -6,7 +7,7 @@
     <p class="tool-text">
       @text
     </p>
-    <a href="#" class="btn btn-40px btn-outline-primary stretched-link">
+    <a href="#" class="btn btn-40px btn-bg-gradient btn-border-gradient btn-gradient-outline-primary-to-teal-400">
       Подробнее
     </a>
   </div>
