--- a/src/scss/bootstrap/_buttons.scss
+++ b/src/scss/bootstrap/_buttons.scss
@@ -180,7 +180,28 @@
   box-shadow: inset 0 0 .875rem 0 rgba(var(--#{$prefix}white-rgb), .70), 0 .25rem 2rem 0 rgba(var(--#{$prefix}teal-rgb), .50);
 }
 
-.btn-gradient-outline-teal {
+.btn-gradient-outline-primary-to-teal-400 {
+  --#{$prefix}btn-color: var(--#{$prefix}primary);
+  --#{$prefix}btn-hover-color: var(--#{$prefix}white);
+  --#{$prefix}btn-active-color: var(--#{$prefix}primary);
+
+  --#{$prefix}btn-bg: linear-gradient(90deg, transparent 0%, transparent 50%, transparent 100%);
+  --#{$prefix}btn-hover-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal-400) 50%, var(--#{$prefix}teal) 100%);
+  --#{$prefix}btn-active-bg: linear-gradient(90deg, transparent 0%, transparent 50%, transparent 100%);
+
+  --#{$prefix}btn-border-color: linear-gradient(90deg, var(--#{$prefix}primary) 0%, var(--#{$prefix}primary) 50%, var(--#{$prefix}primary) 100%);
+  --#{$prefix}btn-hover-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
+  --#{$prefix}btn-active-border-color: linear-gradient(90deg, var(--#{$prefix}primary) 0%, var(--#{$prefix}primary) 50%, var(--#{$prefix}primary) 100%);
+
+  @media (hover: hover) {
+
+    &:is(:hover, :focus-visible) {
+      box-shadow: inset 0 0 .875rem 0 rgba(var(--#{$prefix}white-rgb), .70), 0 .25rem 2rem 0 rgba(var(--#{$prefix}teal-rgb), .50);
+    }
+  }
+}
+
+.btn-gradient-outline-light-to-teal-400 {
   --#{$prefix}btn-color: var(--#{$prefix}white);
   --#{$prefix}btn-hover-color: var(--#{$prefix}white);
   --#{$prefix}btn-active-color: var(--#{$prefix}white);
@@ -191,7 +212,7 @@
 
   --#{$prefix}btn-border-color: linear-gradient(90deg, var(--#{$prefix}white) 0%, var(--#{$prefix}white) 50%, var(--#{$prefix}white) 100%);
   --#{$prefix}btn-hover-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
-  --#{$prefix}btn-active-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
+  --#{$prefix}btn-active-border-color: linear-gradient(90deg, var(--#{$prefix}white) 0%, var(--#{$prefix}white) 50%, var(--#{$prefix}white) 100%);
 
   @media (hover: hover) {
 
@@ -232,6 +253,38 @@
 
   .icon {
     border: .0625rem solid var(--#{$prefix}black);
+    border-radius: 50rem;
+  }
+
+  @media (hover: hover) {
+
+    &:is(:hover, :focus-visible) {
+      box-shadow: 0 .75rem 1rem 0 rgba(var(--#{$prefix}black-rgb), .05), 0 .375rem 1rem 0 rgba(var(--#{$prefix}black-rgb), .20);
+
+      .icon {
+        --_color: var(--#{$prefix}white);
+
+        background-image: radial-gradient(140% 140% at 55% 50%, var(--#{$prefix}black) 0%, rgba(var(--#{$prefix}gray-550-rgb), .15) 100%);
+      }
+    }
+  }
+}
+
+.btn-gradient-outline-light {
+  --#{$prefix}btn-color: var(--#{$prefix}white);
+  --#{$prefix}btn-hover-color: var(--#{$prefix}black);
+  --#{$prefix}btn-active-color: var(--#{$prefix}white);
+
+  --#{$prefix}btn-bg: transparent;
+  --#{$prefix}btn-hover-bg: var(--#{$prefix}gradient-light-60);
+  --#{$prefix}btn-active-bg: transparent;
+
+  --#{$prefix}btn-border-color: linear-gradient(90deg, rgba(var(--#{$prefix}white-rgb), 1) 0%, rgba(var(--#{$prefix}white-rgb), 1) 50%, rgba(var(--#{$prefix}white-rgb), 1) 100%);
+  --#{$prefix}btn-hover-border-color: linear-gradient(90deg, rgba(var(--#{$prefix}black-rgb), 1) 0%, rgba(var(--#{$prefix}black-rgb), .15) 50%, rgba(var(--#{$prefix}black-rgb), 1) 100%);
+  --#{$prefix}btn-active-border-color: linear-gradient(90deg, rgba(var(--#{$prefix}white-rgb), 1) 0%, rgba(var(--#{$prefix}white-rgb), 1) 50%, rgba(var(--#{$prefix}white-rgb), 1) 100%);
+
+  .icon {
+    border: .0625rem solid var(--#{$prefix}white);
     border-radius: 50rem;
   }
 
