--- a/src/scss/components/_nouislider.scss
+++ b/src/scss/components/_nouislider.scss
@@ -22,7 +22,7 @@
       border: none;
       border-radius: 50rem;
       box-shadow: none;
-      top: 50%;
+      top: calc(50% + .0625rem);
       transform: translateY(-50%);
 
       &::after,
@@ -42,5 +42,104 @@
 
   &-connect {
     background-color: var(--#{$prefix}teal-400);
+  }
+
+  &-pips {
+    height: initial;
+    color: var(--#{$prefix}gray-600);
+    padding: 0;
+    top: calc(-.125rem + .0625rem);
+
+    @include media-breakpoint-up(md) {
+      top: calc(-.25rem + .0625rem);
+    }
+  }
+
+  &-marker {
+    background-color: var(--#{$prefix}gray-400);
+
+    &.is-active {
+      background-color: var(--#{$prefix}teal-400);
+    }
+
+    &-horizontal {
+
+      &.noUi-marker-large {
+        width: .25rem;
+        height: .25rem;
+        border-radius: 50%;
+
+        @include media-breakpoint-up(md) {
+          width: .5rem;
+          height: .5rem;
+        }
+      }
+    }
+  }
+
+  &-value {
+    font-size: .5rem;
+
+    @include media-breakpoint-up(md) {
+      font-size: .75rem;
+    }
+
+    &-horizontal {
+      padding-top: .125rem;
+
+      @include media-breakpoint-up(md) {
+        padding-top: .25rem;
+      }
+
+      &:nth-child(2) {
+        transform: translate(0%, 50%);
+      }
+
+      &:last-child {
+        transform: translate(calc(-100% + .125rem), 50%);
+
+        @include media-breakpoint-up(md) {
+          transform: translate(calc(-100% + .25rem), 50%);
+        }
+      }
+    }
+  }
+
+  &-value-horizontal,
+  &-marker-horizontal {
+
+    &:nth-last-child(2),
+    &:last-child {
+      left: calc(100% - .125rem) !important;
+
+      @include media-breakpoint-up(md) {
+        left: calc(100% - .25rem) !important;
+      }
+    }
+  }
+}
+
+.noUi--large {
+
+  .noUi-horizontal {
+
+    .noUi-handle {
+      width: .75rem;
+      height: .75rem;
+      top: calc(50% + .0625rem);
+
+      @include media-breakpoint-up(md) {
+        width: 1.25rem;
+        height: 1.25rem;
+      }
+
+      &-lower {
+        right: -.4375rem;
+
+        @include media-breakpoint-up(md) {
+          right: -.625rem;
+        }
+      }
+    }
   }
 }
