--- a/src/scss/components/_tool.scss
+++ b/src/scss/components/_tool.scss
@@ -100,6 +100,16 @@
       .tool-picture {
         transform: translateX(0%);
       }
+
+      .btn-gradient-outline-primary-to-teal-400 {
+        --#{$prefix}btn-color: var(--#{$prefix}white);
+
+        --#{$prefix}btn-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal-400) 50%, var(--#{$prefix}teal) 100%);
+
+        --#{$prefix}btn-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
+
+        box-shadow: inset 0 0 .875rem 0 rgba(var(--#{$prefix}white-rgb), .70), 0 .25rem 2rem 0 rgba(var(--#{$prefix}teal-rgb), .50);
+      }
     }
   }
 }
