--- a/src/partials/sections/hero.html
+++ b/src/partials/sections/hero.html
@@ -25,7 +25,7 @@
         <div class="d-flex flex-column flex-sm-row justify-content-between gap-16px bg-gradient-hero-top bg-sm-reset rounded-16px p-16px p-sm-0px pb-8px pb-sm-0px rounded-sm-0px position-relative overflow-hidden overflow-sm-visible">
           <div class="pt-lg-64px pt-4px pb-sm-32px">
             <div class="d-flex flex-column align-items-start gap-lg-40px gap-md-32px gap-20px">
-              <div class="d-none d-sm-flex flex-sm-column gap-sm-16px fs-12px">
+              <div class="d-none d-sm-flex flex-sm-column gap-sm-16px fs-12px fs-lg-16px">
                 <h2 class="fs-lg-50px fs-md-32px fs-20px m-0px">
                   @desktop.title
                 </h2>
@@ -35,7 +35,7 @@
                   </p>
                 }
               </div>
-              <div class="d-flex d-sm-none flex-column gap-16px fs-12px">
+              <div class="d-flex d-sm-none flex-column gap-16px fs-12px fs-lg-16px">
                 <h2 class="fs-lg-50px fs-md-32px fs-20px m-0px">
                   @mobile.title
                 </h2>
