--- a/src/scss/bootstrap/_card.scss
+++ b/src/scss/bootstrap/_card.scss
@@ -447,32 +447,29 @@
 }
 
 .card--calc {
-  --#{$prefix}card-bg: var(--#{$prefix}gray-100);
+  --#{$prefix}card-bg: transparent;
   --#{$prefix}card-border-radius: .5rem;
-  --#{$prefix}card-spacer-y: .625rem;
-  --#{$prefix}card-spacer-x: var(--bs-card-spacer-y);
+  --#{$prefix}card-spacer-y: .5rem;
+  --#{$prefix}card-spacer-x: 0rem;
 
   flex-direction: row;
-  gap: 1.5rem;
+  gap: .875rem;
   font-family: var(--#{$prefix}font-manrope);
+  padding-right: 0;
 
   @include media-breakpoint-up(lg) {
-    --#{$prefix}card-spacer-y: .875rem;
     --#{$prefix}card-spacer-x: 1.25rem;
+
+    gap: 1.5rem;
+  }
+
+  @include media-breakpoint-up(xl) {
 
     gap: 2rem;
   }
 
-  @include media-breakpoint-up(xl) {
-    --#{$prefix}card-spacer-x: 1.5rem;
-
-    gap: 2.5rem;
-  }
-
   @include media-breakpoint-up(xxl) {
-    --#{$prefix}card-spacer-x: 1.75rem;
-
-    gap: 3.5rem;
+    gap: 2.5rem;
   }
 
   .card-picture,
@@ -485,29 +482,29 @@
     align-items: center;
 
     img {
-      max-width: 5.5rem;
+      max-width: 5rem;
 
       @include media-breakpoint-up(lg) {
-        max-width: 11rem;
+        max-width: 5.5rem;
       }
     }
+  }
+
+  .card-body {
+    flex: 1 1;
   }
 
   .card-title {
     height: initial;
     font-weight: 700;
     margin-bottom: .5rem;
-
-    @include media-breakpoint-up(lg) {
-      margin-bottom: 1.5rem;
-    }
   }
 
   .card-list {
     line-height: 1.75;
 
     @include media-breakpoint-up(lg) {
-      gap: .875rem;
+      gap: .25rem;
       font-size: inherit;
       line-height: normal;
     }
