--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -50,6 +50,7 @@ $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
 $green:   #004438 !default;
 $teal:    #00c1ad !default;
+$teal-050:#BFD0CD !default;
 $teal-400:#1fd5bf !default;
 $cyan:    #0dcaf0 !default;
 // scss-docs-end color-variables
@@ -325,6 +326,7 @@ $theme-colors: (
   "light":      $light,
   "dark":       $dark,
   "teal":       $teal,
+  "teal-050":   $teal-050,
   "teal-400":   $teal-400,
   "orange-600": $orange-600,
   "gray-150":   $gray-150,
@@ -443,7 +445,9 @@ $sizes: (
   '40px': 2.5rem,
   '48px': 3rem,
   '60px': 3.75rem,
+  '68px': 4.25rem,
   '96px': 6rem,
+  '112px': 7rem,
   '120px': 7.5rem,
   '212px': 13.25rem,
   '240px': 15rem,
@@ -493,6 +497,7 @@ $spacers: (
   '80px': $spacer * 5,
   '100px': $spacer * 6.25,
   '120px': $spacer * 7.5,
+  '160px': $spacer * 10,
   'header': var(--header-height),
 ) !default;
 // scss-docs-end spacer-variables-maps
@@ -1119,9 +1124,9 @@ $form-switch-checked-bg-position: right center !default;
 // scss-docs-start input-group-variables
 $input-group-addon-padding-y:           $input-padding-y !default;
 $input-group-addon-padding-x:           1.25rem !default;
-$input-group-addon-font-weight:         700 !default;
+$input-group-addon-font-weight:         600 !default;
 $input-group-addon-color:               var(--#{$prefix}black) !default;
-$input-group-addon-bg:                  var(--#{$prefix}gray-150) !default;
+$input-group-addon-bg:                  var(--#{$prefix}body-bg) !default;
 $input-group-addon-border-color:        $input-border-color !default;
 // scss-docs-end input-group-variables
 
