--- a/src/scss/bootstrap/_buttons.scss
+++ b/src/scss/bootstrap/_buttons.scss
@@ -559,6 +559,10 @@
   --#{$prefix}btn-color: var(--#{$prefix}teal-050);
 }
 
+.btn-link--orange-600 {
+  --#{$prefix}btn-color: var(--#{$prefix}orange-600);
+}
+
 
 
 .btn-phone {
