--- a/src/scss/bootstrap/_root.scss
+++ b/src/scss/bootstrap/_root.scss
@@ -50,6 +50,7 @@
   --#{$prefix}gradient-hero-bottom: #{$gradient-hero-bottom};
   --#{$prefix}gradient-light: #{$gradient-light};
   --#{$prefix}gradient-light-60: #{$gradient-light-60};
+  --#{$prefix}gradient-teal-400: #{$gradient-teal-400};
 
   // Root and body
   // scss-docs-start root-body-variables
