--- a/src/partials/sections/hero.html
+++ b/src/partials/sections/hero.html
@@ -26,7 +26,7 @@
           <div class="pt-lg-64px pt-4px pb-sm-32px">
             <div class="d-flex flex-column align-items-start gap-lg-40px gap-md-32px gap-20px">
               <div class="d-none d-sm-flex flex-sm-column gap-sm-16px fs-12px fs-lg-16px">
-                <h2 class="fs-lg-50px fs-md-32px fs-20px m-0px">
+                <h2 class="fs-xl-50px fs-lg-36px fs-md-28px fs-20px">
                   @desktop.title
                 </h2>
                 @if (desktop.subtitle) {
@@ -36,7 +36,7 @@
                 }
               </div>
               <div class="d-flex d-sm-none flex-column gap-16px fs-12px fs-lg-16px">
-                <h2 class="fs-lg-50px fs-md-32px fs-20px m-0px">
+                <h2 class="fs-xl-50px fs-lg-36px fs-md-28px fs-20px">
                   @mobile.title
                 </h2>
                 @if (mobile.subtitle) {
