--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -429,6 +429,7 @@ $gradient-hero-top: linear-gradient(to top, #e9edf0 0%, #f3f5f7 60%, #c4d3dc 100
 $gradient-warm: linear-gradient(90deg, #{$orange-600} 0%, #{$orange-300} 50%, #{$orange-600} 100%) !default;
 $gradient-light: linear-gradient(90deg, #{$white} 0%, #{$white} 50%, #{$gray-200} 100%) !default;
 $gradient-light-60: linear-gradient(90deg, rgba(var(--#{$prefix}white-rgb), .6) 0%, rgba(var(--#{$prefix}white-rgb), .6) 50%, rgba(var(--#{$prefix}gray-200-rgb), .6) 100%) !default;
+$gradient-teal-400: linear-gradient(to top, rgba(var(--#{$prefix}teal-400-rgb), .1) 0%, rgba(var(--#{$prefix}teal-400-rgb), .3) 50%, rgba(var(--#{$prefix}teal-400-rgb), .1) 100%) !default;
 $gradient-border: linear-gradient(90deg, rgba(var(--#{$prefix}primary-rgb), 0) 0%, rgba(var(--#{$prefix}primary-rgb), 0.50) 50%, rgba(var(--#{$prefix}primary-rgb), 0) 100%) !default;
 // scss-docs-end variable-gradient
 
@@ -508,6 +509,7 @@ $spacers: (
 
 // scss-docs-start position-map
 $position-values: (
+  auto: auto,
   0: 0,
   25: 25%,
   50: 50%,
