--- a/src/scss/bootstrap/_utilities.scss
+++ b/src/scss/bootstrap/_utilities.scss
@@ -837,6 +837,7 @@ $utilities: map-merge(
       values: (
         "norepeat": no-repeat,
         "repeat": repeat,
+        "x-repeat": repeat-x,
       )
     ),
     "background-size": (
